@@ -41,8 +41,12 @@ class tx_AdGoogleMapsPluginAddress_Service_AddressPostProcess {
 	 * @return void
 	 */
 	public function processDatamap_postProcessFieldArray($status, $table, $uid, &$fieldArray, $reference) {
-		$extensionConfiguration = Tx_AdGoogleMaps_Utility_BackEnd::getExtensionConfiguration('ad_google_maps_plugin_address');
-		if ($table === 'tt_address' && (
+		$disablePositionFixing = (boolean) (array_key_exists('tx_adgooglemapspluginaddress_disable_position_fixing', $fieldArray) 
+			? $fieldArray['tx_adgooglemapspluginaddress_disable_position_fixing'] 
+			: $reference->checkValue_currentRecord['tx_adgooglemapspluginaddress_disable_position_fixing']
+		);
+
+		if ($table === 'tt_address' && $disablePositionFixing === FALSE && (
 				array_key_exists('zip', $fieldArray) || 
 				array_key_exists('city', $fieldArray) || 
 				array_key_exists('country', $fieldArray) || 
