@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>CSH</type>
+		<description>CSH labels for FlexForm fields</description>
+		<csh_table>tt_address</csh_table>
+		<fileId>EXT:ad_google_maps_plugin_address/Resources/Private/Language/locallang_tca_csh_ttaddress.xml</fileId>
+		<labelContext type="array"></labelContext>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="tx_adgooglemapspluginaddress_disable_position_fixing.description">If one of the fields "Address", "ZIP", "City" or "Country" of an address changed, the position will be calculated new. With this option this function will be suppress.</label>
+		</languageKey>
+		<languageKey index="de" type="array">
+			<label index="tx_adgooglemapspluginaddress_disable_position_fixing.description">Wird eines der Felder "Adresse", "PLZ", "Stadt" oder "Land" einer Adresse geändert, wird die Position automatisch neu berechnet. Mit dieser Option kann dies unterbunden werden.</label>
+		</languageKey>
+	</data>
+</T3locallang>
